Spring DI added to controller, services and dao according issue #1

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
             <artifactId>jscience</artifactId>
             <version>4.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
