--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.1.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
