--- a/controller/src/main/webapp/WEB-INF/web.xml
+++ b/controller/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,13 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>WEB-INF/application_context.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
 </web-app>
