Resolved issues #1, #9, #6 (Tasks 1,2,3)

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -14,5 +14,17 @@
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1208.jre7</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version> 4.0.3.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
