--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -21,8 +21,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>4.3.1.RELEASE</version>
+            <artifactId>spring-webmvc</artifactId>
+            <version> 4.0.3.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
