Task 13 (Issue #10) is done. Spring version in pom.xml taken out to properties section.

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
 
     <name>CRM Maven Webapp</name>
 
+    <properties>
+        <spring.version>4.3.1.RELEASE</spring.version>
+    </properties>
+
     <dependencies>
         <!-- Put here PostgreSQL connector dependency-->
         <dependency>
@@ -127,7 +131,13 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.0.3.RELEASE</version>
+            <version>${spring.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
     <properties>
