--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version> 4.0.3.RELEASE</version>
+            <version> ${spring.version}</version>
         </dependency>
     </dependencies>
 </project>
