Task 14 (Issue #15) is done. But on real DB. For now. With few profiles (plain JDBC + JDBC Template) for testing

--- a/controller/src/main/webapp/WEB-INF/web.xml
+++ b/controller/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,9 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <context-param>
+        <param-name>spring.profiles.active</param-name>
+        <param-value>jdbcTemplate</param-value>
+    </context-param>
+
 </web-app>
