Created dao-interface and овис-template modules.

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,8 @@
         <module>dao</module>
         <module>model</module>
         <module>service</module>
+        <module>jdbc-template</module>
+        <module>dao-i</module>
     </modules>
 
     <name>CRM Maven Webapp</name>
