--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,7 +20,17 @@
         </dependency>
         <dependency>
             <groupId>crm</groupId>
+            <artifactId>dao-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>crm</groupId>
             <artifactId>dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>crm</groupId>
+            <artifactId>jdbc-template</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
