Task 16(Issue #18) is done. Aspects added.

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -16,9 +16,25 @@
         </dependency>
         <dependency>
             <groupId>crm</groupId>
+            <artifactId>aspects</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>crm</groupId>
             <artifactId>dao-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${acpectj.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
