--- a/jdbc-template/pom.xml
+++ b/jdbc-template/pom.xml
@@ -23,13 +23,17 @@
             <artifactId>dao-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>crm</groupId>
+            <artifactId>aspects</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- needed for test !!!! remove  after all dao-realization will be by jdbcTemplate-->
         <dependency>
             <groupId>crm</groupId>
             <artifactId>dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
