Task 16 (Issue #18) is done. Aspects added. Fixed file writers. Add own. Task 20 (Issue ##22) is done. Tranactions added.

--- a/aspects/src/main/resources/log4j.properties
+++ b/aspects/src/main/resources/log4j.properties
@@ -6,14 +6,14 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%p %d [%c] - <%m>%n
 
-log4j.appender.dao_success_log=org.apache.log4j.FileAppender
-log4j.appender.dao_success_log.File=${catalina.base}/logs/dao_success.log
-log4j.appender.dao_success_log.Threshold=INFO
-log4j.appender.dao_success_log.layout=org.apache.log4j.PatternLayout
-log4j.appender.dao_success_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
+# log4j.appender.dao_success_log=org.apache.log4j.RollingFileAppender
+# log4j.appender.dao_success_log.File=d:/logs/dao_success.log
+# log4j.appender.dao_success_log.Threshold=INFO
+# log4j.appender.dao_success_log.layout=org.apache.log4j.PatternLayout
+# log4j.appender.dao_success_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
 
-log4j.appender.dao_thrown_log=org.apache.log4j.FileAppender
-log4j.appender.dao_thrown_log.File=${catalina.base}/logs/dao_thrown.log
-log4j.appender.dao_thrown_log.Threshold=ERROR
-log4j.appender.dao_thrown_log.layout=org.apache.log4j.PatternLayout
-log4j.appender.dao_thrown_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
+# log4j.appender.dao_thrown_log=org.apache.log4j.RollingFileAppender
+# log4j.appender.dao_thrown_log.File=d:/logs/dao_thrown.log
+# log4j.appender.dao_thrown_log.Threshold=ERROR
+# log4j.appender.dao_thrown_log.layout=org.apache.log4j.PatternLayout
+# log4j.appender.dao_thrown_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
