Task18 (isssue #20). REST для Контактов на Spring MVC. Done. Need to test

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <module>jdbc-template</module>
         <module>dao-i</module>
         <module>aspects</module>
+        <module>rest</module>
     </modules>
 
     <name>CRM Maven Webapp</name>
