--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -16,6 +16,11 @@
         </dependency>
         <dependency>
             <groupId>crm</groupId>
+            <artifactId>restful</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>crm</groupId>
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
