--- a/controller/src/main/webapp/WEB-INF/web.xml
+++ b/controller/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+
     <filter>
         <filter-name>CharsetFilter</filter-name>
         <filter-class>com.becomejavasenior.servlets.CharsetFilter</filter-class>
@@ -33,9 +34,19 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <servlet>
+        <servlet-name>rest</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/company</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>rest</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
 
     <listener>
