--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -58,5 +58,10 @@
             <artifactId>hibernate-validator-annotation-processor</artifactId>
             <version>5.2.4.Final</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
     </dependencies>
 </project>
