Task 23. (isssue #25). First task added. Report Dao nedd to test.

--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,13 @@
         <module>controller</module>
         <module>dao</module>
         <module>model</module>
-        <module>service</module>
         <module>jdbc-template</module>
         <module>dao-i</module>
         <module>aspects</module>
         <module>rest</module>
+        <module>service</module>
+        <module>schedule</module>
+        <module>tasks</module>
     </modules>
 
     <name>CRM Maven Webapp</name>
