Dao Log Aspects changed.

--- a/controller/src/main/resources/log4j.properties
+++ b/controller/src/main/resources/log4j.properties
@@ -6,18 +6,10 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%p %d [%c] - <%m>%n
 
-log4j.appender.dao_s_log=org.apache.log4j.RollingFileAppender
-log4j.appender.dao_s_log.File=d:/logs/dao_success.log
-log4j.appender.dao_s_log.layout=org.apache.log4j.PatternLayout
-log4j.appender.dao_s_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
+log4j.appender.dao_log=org.apache.log4j.RollingFileAppender
+log4j.appender.dao_log.File=${catalina.base}/logs/dao/dao.log
+log4j.appender.dao_log.layout=org.apache.log4j.PatternLayout
+log4j.appender.dao_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
 
-log4j.appender.dao_thr_log=org.apache.log4j.RollingFileAppender
-log4j.appender.dao_thr_log.File=d:/logs/dao_thrown.log
-log4j.appender.dao_thr_log.layout=org.apache.log4j.PatternLayout
-log4j.appender.dao_thr_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
-
-log4j.logger.dao_success_log = INFO,dao_s_log
-log4j.additivity.dao_success_log = false
-
-log4j.logger.dao_thrown_log = INFO,dao_thr_log
-log4j.additivity.dao_thrown_log = false
+log4j.logger.dao_logger = INFO,dao_log
+log4j.additivity.dao_log = false
