Shedule moved to annotation driven.

--- a/aspects/src/main/resources/log4j.properties
+++ b/aspects/src/main/resources/log4j.properties
@@ -13,4 +13,4 @@ log4j.appender.dao_log..DatePattern='.'yyyy-MM-dd
 log4j.appender.dao_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
 
 log4j.logger.dao_logger = DEBUG,dao_log
-log4j.additivity.dao_success_log = false
+log4j.additivity.dao_logger = false
