Task 24 (issue #26). Works? but with many questions.

--- a/aspects/src/main/resources/log4j.properties
+++ b/aspects/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout.layout.ConversionPattern=%p %d [%c] - <%m>%n
 log4j.appender.dao_log=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dao_log.File=d:/logs/dao/dao.log
 log4j.appender.dao_log.layout=org.apache.log4j.PatternLayout
-log4j.appender.dao_log..DatePattern='.'yyyy-MM-dd
+log4j.appender.dao_log.DatePattern='.'yyyy-MM-dd
 log4j.appender.dao_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
 
 log4j.logger.dao_logger = DEBUG,dao_log
