--- a/jdbc-template/pom.xml
+++ b/jdbc-template/pom.xml
@@ -28,12 +28,14 @@
             <artifactId>aspects</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- needed for test !!!! remove  after all dao-realization will be by jdbcTemplate-->
+        <!-- dao needed because of uncompleted dao-i implementation!!!!
+        remove dao depentency  after all dao-realization will be implemented by jdbcTemplate-->
         <dependency>
             <groupId>crm</groupId>
             <artifactId>dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
@@ -45,12 +47,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
-
+-->
     </dependencies>
 
 </project>
