--- a/main/pom.xml
+++ b/main/pom.xml
@@ -7,42 +7,29 @@
         <groupId>crm</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>service</artifactId>
-    <packaging>jar</packaging>
-
+    <artifactId>main</artifactId>
+    <packaging>war</packaging>
     <dependencies>
         <dependency>
             <groupId>crm</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>controller</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>crm</groupId>
-            <artifactId>dao-interface</artifactId>
+            <artifactId>mvc</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>crm</groupId>
-            <artifactId>dao</artifactId>
+            <artifactId>restful</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>crm</groupId>
-            <artifactId>jdbc-template</artifactId>
+            <artifactId>tasks</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
-        <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>1.5.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
-            <version>${spring.version}</version>
         </dependency>
     </dependencies>
 </project>
