--- a/main/src/main/webapp/WEB-INF/web.xml
+++ b/main/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-<!--
+
     <filter>
         <filter-name>CharsetFilter</filter-name>
         <filter-class>com.becomejavasenior.servlets.CharsetFilter</filter-class>
@@ -21,26 +21,34 @@
         <filter-name>CharsetFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
--->
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath*:application_context.xml</param-value>
     </context-param>
 
     <servlet>
-        <servlet-name>dispatcher</servlet-name>
+        <servlet-name>mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath*:mvc-servlet.xml</param-value>
+        </init-param>
     </servlet>
 
     <servlet>
         <servlet-name>rest</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath*:rest-servlet.xml</param-value>
+        </init-param>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>dispatcher</servlet-name>
+        <servlet-name>mvc</servlet-name>
         <url-pattern>/company</url-pattern>
     </servlet-mapping>
 
