--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,20 @@
     <artifactId>crm-system</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <spring.version>4.3.1.RELEASE</spring.version>
+        <acpectj.version>1.8.9</acpectj.version>
+        <log4j.version>1.2.17</log4j.version>
+        <postgresql.version>9.4.1208</postgresql.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -68,12 +77,12 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4.1208</version>
+            <version>${postgresql.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -85,6 +94,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -142,8 +152,5 @@
         </dependency>
 
     </dependencies>
-    <properties>
-        <spring.version>4.3.1.RELEASE</spring.version>
-        <acpectj.version>1.8.9</acpectj.version>
-    </properties>
+
 </project>
