Cleared old logger. Added to old controller package and UserService

--- a/main/src/main/resources/log4j.properties
+++ b/main/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -10,6 +10,19 @@ log4j.appender.dao_log=org.apache.log4j.RollingFileAppender
 log4j.appender.dao_log.File=${catalina.base}/logs/dao/dao.log
 log4j.appender.dao_log.layout=org.apache.log4j.PatternLayout
 log4j.appender.dao_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
-
-log4j.logger.dao_logger = INFO,dao_log
+log4j.logger.dao_logger = DEBUG,dao_log
 log4j.additivity.dao_log = false
+
+log4j.appender.controller_log=org.apache.log4j.RollingFileAppender
+log4j.appender.controller_log.File=${catalina.base}/logs/controller/controller.log
+log4j.appender.controller_log.layout=org.apache.log4j.PatternLayout
+log4j.appender.controller_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
+log4j.logger.controller_logger = DEBUG,controller_log
+log4j.additivity.controller_log = false
+
+log4j.appender.service_log=org.apache.log4j.RollingFileAppender
+log4j.appender.service_log.File=${catalina.base}/logs/service/service.log
+log4j.appender.service_log.layout=org.apache.log4j.PatternLayout
+log4j.appender.service_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
+log4j.logger.service_logger = DEBUG,service_log
+log4j.additivity.service_log = false
