module tasks renamed to schedule

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>crm</groupId>
-            <artifactId>tasks</artifactId>
+            <artifactId>schedule</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
