--- a/jdbc-template/pom.xml
+++ b/jdbc-template/pom.xml
@@ -28,12 +28,13 @@
             <artifactId>aspects</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- dao needed because of uncompleted dao-i implementation!!!!
+        <!-- dao needed because of uncompleted dao-i implementation in this module!!!!
         remove dao depentency  after all dao-realization will be implemented by jdbcTemplate-->
         <dependency>
             <groupId>crm</groupId>
             <artifactId>dao</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>>
         </dependency>
 
         <dependency>
