logging added to shedule module

--- a/main/src/main/resources/log4j.properties
+++ b/main/src/main/resources/log4j.properties
@@ -26,3 +26,10 @@ log4j.appender.service_log.layout=org.apache.log4j.PatternLayout
 log4j.appender.service_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
 log4j.logger.service_logger = DEBUG,service_log
 log4j.additivity.service_log = false
+
+log4j.appender.schedule_log=org.apache.log4j.RollingFileAppender
+log4j.appender.schedule_log.File=${catalina.base}/logs/schedule/schedule.log
+log4j.appender.schedule_log.layout=org.apache.log4j.PatternLayout
+log4j.appender.schedule_log.layout.ConversionPattern=%d [%24F:%t:%L] - %m%n
+log4j.logger.schedule_logger = DEBUG,schedule_log
+log4j.additivity.schedule_log = false
